<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btn_nightlight"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:text="@string/nightlight"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_arrow_up"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/uparrow" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_arrow_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/leftarrow" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_lightness"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lightness"
                android:textSize="16sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_arrow_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rightarrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_arrow_down"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/downarrow" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_auxiliary1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/auxiliary1"
                android:textSize="16sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_auxiliary2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/auxiliary2"
                android:textSize="16sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_auxiliary3"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/auxiliary3"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_warmth_decrease"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/warmth_decrease"
                android:textSize="16sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_warmth_increase"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/warmth_increase"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_segment"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/segement"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_enable"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:enabled="false"
                android:text="@string/On"
                android:textSize="35sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_disable"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:enabled="false"
                android:text="@string/Off"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/info_1"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>